# pure-semantic-ui

./: LICENSE  README.md  default.nix  pure-semantic-ui.cabal  semantic-ui-pure.cabal
src/: Main.hs  Semantic.hs
src/Semantic/: Accordion.hs  Addons.hs  Advertisement.hs  Behaviors.hs  Breadcrumb.hs  Button.hs  Card.hs  Checkbox.hs  Collections.hs  Comment.hs  Confirm.hs  Container.hs  Dimmer.hs  Divider.hs  Dropdown.hs  Elements.hs  Embed.hs  Extensions.hs  Feed.hs  Flag.hs  Form.hs  Grid.hs  Header.hs  Icon.hs  Image.hs  Input.hs  Item.hs  Label.hs  List.hs  Loader.hs  Menu.hs  Message.hs  Modal.hs  Modules.hs  Popup.hs  Portal.hs  Progress.hs  Properties.hs  Proxy.hs  Rail.hs  (+17 more)
src/Semantic/Addons/: Accordion.hs  Checkbox.hs  Confirm.hs  Portal.hs  Proxy.hs  Radio.hs  Responsive.hs  TextArea.hs  Transition.hs  TransitionablePortal.hs
src/Semantic/Addons/Accordion/: AccordionAccordion.hs  AccordionContent.hs  AccordionTitle.hs
src/Semantic/Addons/Transition/: TransitionGroup.hs
src/Semantic/Behaviors/: Visibility.hs
src/Semantic/Collections/: Breadcrumb.hs  Form.hs  Grid.hs  Menu.hs  Message.hs  Table.hs
src/Semantic/Collections/Breadcrumb/: BreadcrumbDivider.hs  BreadcrumbSection.hs
src/Semantic/Collections/Form/: FormField.hs  FormGroup.hs
src/Semantic/Collections/Grid/: GridColumn.hs  GridRow.hs
src/Semantic/Collections/Menu/: MenuHeader.hs  MenuItem.hs  MenuMenu.hs
src/Semantic/Collections/Message/: MessageContent.hs  MessageHeader.hs  MessageItem.hs  MessageList.hs
src/Semantic/Collections/Table/: TableBody.hs  TableCell.hs  TableFooter.hs  TableHeader.hs  TableHeaderCell.hs  TableRow.hs
src/Semantic/Elements/: Button.hs  Container.hs  Divider.hs  Flag.hs  Header.hs  Icon.hs  Image.hs  Input.hs  KeyedList.hs  Label.hs  List.hs  Loader.hs  Rail.hs  Reveal.hs  Segment.hs  Step.hs
src/Semantic/Elements/Button/: ButtonContent.hs  ButtonGroup.hs  ButtonOr.hs
src/Semantic/Elements/Header/: HeaderContent.hs  HeaderSubheader.hs
src/Semantic/Elements/Icon/: IconGroup.hs
src/Semantic/Elements/Image/: ImageGroup.hs
src/Semantic/Elements/Label/: LabelDetail.hs  LabelGroup.hs
src/Semantic/Elements/List/: ListContent.hs  ListDescription.hs  ListHeader.hs  ListIcon.hs  ListItem.hs  ListList.hs
src/Semantic/Elements/Segment/: SegmentGroup.hs
src/Semantic/Elements/Step/: StepContent.hs  StepDescription.hs  StepGroup.hs  StepTitle.hs
src/Semantic/Extensions/: Active.hs  Animated.hs  As.hs  Attached.hs  Attributes.hs  Avatar.hs  Basic.hs  Block.hs  Bordered.hs  Children.hs  Classes.hs  Name.hs  Utils.hs
src/Semantic/Modules/: Accordion.hs  Checkbox.hs  Dimmer.hs  Dropdown.hs  Embed.hs  Modal.hs  Popup.hs  Progress.hs  Rating.hs  Search.hs  Sidebar.hs  Sticky.hs  Tab.hs  Transition.hs
src/Semantic/Modules/Accordion/: AccordionAccordion.hs  AccordionContent.hs  AccordionTitle.hs
src/Semantic/Modules/Dimmer/: DimmerDimmable.hs
src/Semantic/Modules/Dropdown/: DropdownDivider.hs  DropdownHeader.hs  DropdownItem.hs  DropdownMenu.hs  DropdownSearchInput.hs
src/Semantic/Modules/Modal/: ModalActions.hs  ModalContent.hs  ModalDescription.hs  ModalHeader.hs
src/Semantic/Modules/Popup/: PopupContent.hs  PopupHeader.hs
src/Semantic/Modules/Rating/: RatingIcon.hs
src/Semantic/Modules/Search/: SearchCategory.hs  SearchResult.hs  SearchResults.hs
src/Semantic/Modules/Sidebar/: SidebarPushable.hs  SidebarPusher.hs
src/Semantic/Modules/Tab/: TabPane.hs
src/Semantic/Modules/Transition/: TransitionGroup.hs
src/Semantic/Properties/: Action.hs  Active.hs  ActiveIndex.hs  Aligned.hs  Animated.hs  Animation.hs  AnimationDuration.hs  AriaChecked.hs  AriaPosinset.hs  AriaSetsize.hs  As.hs  AspectRatio.hs  Attached.hs  Attributes.hs  AutoHeight.hs  AutoSuccess.hs  Autoplay.hs  Avatar.hs  Basic.hs  Block.hs  Blurring.hs  Bordered.hs  Borderless.hs  BottomOffset.hs  Branded.hs  Bulleted.hs  CancelButton.hs  Category.hs  Celled.hs  Centered.hs  Children.hs  Circular.hs  Classes.hs  Clearable.hs  Clearing.hs  Close.hs  CloseOnDimmerClick.hs  CloseOnDocumentClick.hs  CloseOnEscape.hs  CloseOnPortalMouseLeave.hs  (+226 more)
src/Semantic/Views/: Advertisement.hs  Card.hs  Comment.hs  Feed.hs  Item.hs  Statistic.hs
src/Semantic/Views/Card/: CardContent.hs  CardDescription.hs  CardGroup.hs  CardHeader.hs  CardMeta.hs
src/Semantic/Views/Comment/: CommentAction.hs  CommentActions.hs  CommentAuthor.hs  CommentAvatar.hs  CommentContent.hs  CommentGroup.hs  CommentMetadata.hs  CommentText.hs
src/Semantic/Views/Feed/: FeedContent.hs  FeedDate.hs  FeedEvent.hs  FeedExtra.hs  FeedLabel.hs  FeedLike.hs  FeedMeta.hs  FeedSummary.hs  FeedUser.hs
src/Semantic/Views/Item/: ItemContent.hs  ItemDescription.hs  ItemExtra.hs  ItemGroup.hs  ItemHeader.hs  ItemImage.hs  ItemMeta.hs
src/Semantic/Views/Statistic/: StatisticGroup.hs  StatisticLabel.hs  StatisticValue.hs
test/: Main.hs
test/Test/: Proxy.hs
