name:              pure-semantic-ui
version:           0.7.0.0
synopsis:          
homepage:          
author:            S. M. Hickman
maintainer:        sean@grump.ly
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:
      src

  build-depends:
    base >=4.8,
    pure-cond >= 0.7 && < 1,
    pure-lifted >= 0.7 && < 1,
    pure >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    pure-uri >= 0.7 && < 1

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    RecordWildCards
    TypeFamilies
    TypeOperators
    ViewPatterns
    OverloadedStrings
    MultiParamTypeClasses
    PackageImports
    CPP
    PolyKinds
    NoMonomorphismRestriction
    PatternSynonyms
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    ScopedTypeVariables
    TupleSections

  exposed-modules:
    Semantic.Confirm
    Semantic.Proxy
    Semantic.Portal
    Semantic.Responsive
    Semantic.TextArea
    Semantic.TransitionablePortal
    Semantic.Visibility
    Semantic.Breadcrumb
    Semantic.Form
    Semantic.Grid
    Semantic.Menu
    Semantic.Message
    Semantic.Table
    Semantic.Button
    Semantic.Container
    Semantic.Divider
    Semantic.Flag
    Semantic.Header
    Semantic.Icon
    Semantic.Image
    Semantic.Input
    Semantic.Label
    Semantic.List
    Semantic.Loader
    Semantic.Rail
    Semantic.Reveal
    Semantic.Segment
    Semantic.Step
    Semantic.Accordion
    Semantic.Checkbox
    Semantic.Dimmer
    Semantic.Dropdown
    Semantic.Embed
    Semantic.Modal
    Semantic.Popup
    Semantic.Progress
    Semantic.Rating
    Semantic.Search
    Semantic.Sidebar
    Semantic.Sticky
    Semantic.Tab
    Semantic.Transition
    Semantic.Properties
    Semantic.Utils
    Semantic.Advertisement
    Semantic.Card
    Semantic.Comment
    Semantic.Feed
    Semantic.Item
    Semantic.Statistic

  default-language: Haskell2010
