name:              pure-semantic-ui
version:           0.8.0.0
homepage:          purehs.org/doc/pure-semantic-ui
author:            Sean Hickman
maintainer:        sean@grumply.com
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type: git
  location: https://github.com/grumply/pure-semantic-ui.git

library
  hs-source-dirs:
      src

  build-depends:
    base,
    pure-cond,
    pure-core,
    pure-lifted,
    pure,
    pure-txt,
    pure-uri

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    RecordWildCards
    TypeFamilies
    TypeOperators
    ViewPatterns
    OverloadedStrings
    MultiParamTypeClasses
    PackageImports
    CPP
    PolyKinds
    NoMonomorphismRestriction
    PatternSynonyms
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    ScopedTypeVariables
    TupleSections

  exposed-modules:
    Semantic.Confirm
    Semantic.Proxy
    Semantic.Portal
    Semantic.Responsive
    Semantic.TextArea
    Semantic.TransitionablePortal
    Semantic.Visibility
    Semantic.Breadcrumb
    Semantic.Form
    Semantic.Grid
    Semantic.Menu
    Semantic.Message
    Semantic.Table
    Semantic.Button
    Semantic.Container
    Semantic.Divider
    Semantic.Flag
    Semantic.Header
    Semantic.Icon
    Semantic.Image
    Semantic.Input
    Semantic.Label
    Semantic.List
    Semantic.Loader
    Semantic.Rail
    Semantic.Reveal
    Semantic.Segment
    Semantic.Step
    Semantic.Accordion
    Semantic.Checkbox
    Semantic.Dimmer
    Semantic.Dropdown
    Semantic.Embed
    Semantic.Modal
    Semantic.Popup
    Semantic.Progress
    Semantic.Rating
    Semantic.Search
    Semantic.Sidebar
    Semantic.Sticky
    Semantic.Tab
    Semantic.Transition
    Semantic.Properties
    Semantic.Utils
    Semantic.Advertisement
    Semantic.Card
    Semantic.Comment
    Semantic.Feed
    Semantic.Item
    Semantic.Statistic

  default-language: Haskell2010
