name:              semantic-ui-pure
version:           0.1.0.1
synopsis:          
homepage:          
author:            S. M. Hickman
maintainer:        sean@grump.ly
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:
      src

  build-depends:
      base >=4.8
    , pure
    -- END DEPENDENCIES

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    RecordWildCards
    TypeFamilies
    TypeOperators
    ViewPatterns
    OverloadedStrings
    MultiParamTypeClasses
    PackageImports
    CPP
    PolyKinds
    NoMonomorphismRestriction
    PatternSynonyms
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    -- END EXTENSIONS

  exposed-modules:
    Semantic
    Semantic.Addons
    Semantic.Addons.Confirm
    Semantic.Addons.Portal
    Semantic.Addons.Proxy
    Semantic.Addons.Radio
    Semantic.Behaviors
    Semantic.Behaviors.Visibility
    Semantic.Collections
    Semantic.Collections.Breadcrumb
    Semantic.Collections.Breadcrumb.BreadcrumbDivider
    Semantic.Collections.Breadcrumb.BreadcrumbSection
    Semantic.Collections.Form
    Semantic.Collections.Form.FormField
    Semantic.Collections.Form.FormGroup
    Semantic.Collections.Grid
    Semantic.Collections.Grid.GridColumn
    Semantic.Collections.Grid.GridRow
    Semantic.Collections.Menu
    Semantic.Collections.Menu.MenuHeader
    Semantic.Collections.Menu.MenuItem
    Semantic.Collections.Menu.MenuMenu
    Semantic.Collections.Message
    Semantic.Collections.Message.MessageContent
    Semantic.Collections.Message.MessageHeader
    Semantic.Collections.Message.MessageItem
    Semantic.Collections.Message.MessageList
    Semantic.Collections.Table
    Semantic.Collections.Table.TableBody
    Semantic.Collections.Table.TableCell
    Semantic.Collections.Table.TableFooter
    Semantic.Collections.Table.TableHeader
    Semantic.Collections.Table.TableHeaderCell
    Semantic.Collections.Table.TableRow
    Semantic.Elements
    Semantic.Elements.Button
    Semantic.Elements.Button.ButtonContent
    Semantic.Elements.Button.ButtonGroup
    Semantic.Elements.Button.ButtonOr
    Semantic.Elements.Container
    Semantic.Elements.Divider
    Semantic.Elements.Flag
    Semantic.Elements.Header
    Semantic.Elements.Header.HeaderContent
    Semantic.Elements.Header.HeaderSubheader
    Semantic.Elements.Icon
    Semantic.Elements.Icon.IconGroup
    Semantic.Elements.Image
    Semantic.Elements.Image.ImageGroup
    Semantic.Elements.Input
    Semantic.Elements.Label
    Semantic.Elements.Label.LabelDetail
    Semantic.Elements.Label.LabelGroup
    Semantic.Elements.KeyedList
    Semantic.Elements.List
    Semantic.Elements.List.ListContent
    Semantic.Elements.List.ListDescription
    Semantic.Elements.List.ListHeader
    Semantic.Elements.List.ListIcon
    Semantic.Elements.List.ListItem
    Semantic.Elements.List.ListList
    Semantic.Elements.Loader
    Semantic.Elements.Rail
    Semantic.Elements.Reveal
    Semantic.Elements.Segment
    Semantic.Elements.Segment.SegmentGroup
    Semantic.Elements.Step
    Semantic.Elements.Step.StepContent
    Semantic.Elements.Step.StepDescription
    Semantic.Elements.Step.StepGroup
    Semantic.Elements.Step.StepTitle
    Semantic.Modules.Accordion
    Semantic.Modules.Accordion.AccordionAccordion
    Semantic.Modules.Accordion.AccordionContent
    Semantic.Modules.Accordion.AccordionTitle
    Semantic.Modules.Checkbox
    Semantic.Modules.Dimmer
    Semantic.Modules.Dimmer.DimmerDimmable
    Semantic.Modules.Modal
    Semantic.Modules.Modal.ModalActions
    Semantic.Modules.Modal.ModalContent
    Semantic.Modules.Modal.ModalDescription
    Semantic.Modules.Modal.ModalHeader
    Semantic.Modules.Tab
    Semantic.Modules.Tab.TabPane
    Semantic.Modules.Transition
    Semantic.Modules.Transition.TransitionGroup
    Semantic.Modules.Progress
    Semantic.Properties
    Semantic.Properties.Action
    Semantic.Properties.Active
    Semantic.Properties.Animated
    Semantic.Properties.Animation
    Semantic.Properties.AnimationDuration
    Semantic.Properties.As
    Semantic.Properties.Attached
    Semantic.Properties.Attributes
    Semantic.Properties.AutoSuccess
    Semantic.Properties.Avatar
    Semantic.Properties.Basic
    Semantic.Properties.Block
    Semantic.Properties.Blurring
    Semantic.Properties.Bordered
    Semantic.Properties.Borderless
    Semantic.Properties.Bulleted
    Semantic.Properties.Celled
    Semantic.Properties.Centered
    Semantic.Properties.Children
    Semantic.Properties.Circular
    Semantic.Properties.Classes
    Semantic.Properties.Clearing
    Semantic.Properties.Close
    Semantic.Properties.CloseOnDimmerClick
    Semantic.Properties.CloseOnDocumentClick
    Semantic.Properties.CloseOnEscape
    Semantic.Properties.CloseOnPortalMouseLeave
    Semantic.Properties.CloseOnRootNodeClick
    Semantic.Properties.CloseOnTriggerBlur
    Semantic.Properties.CloseOnTriggerMouseLeave
    Semantic.Properties.Collapsed
    Semantic.Properties.Collapsing
    Semantic.Properties.Color
    Semantic.Properties.Columns
    Semantic.Properties.Completed
    Semantic.Properties.Context
    Semantic.Properties.Continuous
    Semantic.Properties.Corner
    Semantic.Properties.Definition
    Semantic.Properties.Compact
    Semantic.Properties.DefaultOpen
    Semantic.Properties.Dimmed
    Semantic.Properties.DimmerType
    Semantic.Properties.Disabled
    Semantic.Properties.Divided
    Semantic.Properties.Dividing
    Semantic.Properties.Doubling
    Semantic.Properties.Empty
    Semantic.Properties.Error
    Semantic.Properties.Extra
    Semantic.Properties.FireOnMount
    Semantic.Properties.Fitted
    Semantic.Properties.Fixed
    Semantic.Properties.Flipped
    Semantic.Properties.Floated
    Semantic.Properties.Floating
    Semantic.Properties.Fluid
    Semantic.Properties.Focus
    Semantic.Properties.Focused
    Semantic.Properties.FullWidth
    Semantic.Properties.Grouped
    Semantic.Properties.Hidden
    Semantic.Properties.Horizontal
    Semantic.Properties.Index
    Semantic.Properties.Indicating
    Semantic.Properties.Info
    Semantic.Properties.Inline
    Semantic.Properties.InnerRef
    Semantic.Properties.Instant
    Semantic.Properties.Internal
    Semantic.Properties.Inverted
    Semantic.Properties.IsChecked
    Semantic.Properties.IsContainer
    Semantic.Properties.IsHeader
    Semantic.Properties.IsIcon
    Semantic.Properties.IsImage
    Semantic.Properties.IsIndeterminate
    Semantic.Properties.IsRadio
    Semantic.Properties.IsText
    Semantic.Properties.ItemsPerRow
    Semantic.Properties.Labeled
    Semantic.Properties.LabelPosition
    Semantic.Properties.Link
    Semantic.Properties.Loading
    Semantic.Properties.Localize
    Semantic.Properties.Minimal
    Semantic.Properties.MountNode
    Semantic.Properties.MountOnShow
    Semantic.Properties.MouseEnterDelay
    Semantic.Properties.MouseLeaveDelay
    Semantic.Properties.Name
    Semantic.Properties.Negative
    Semantic.Properties.Offset
    Semantic.Properties.OnBottomPassed
    Semantic.Properties.OnBottomPassedReverse
    Semantic.Properties.OnBottomVisible
    Semantic.Properties.OnBottomVisibleReverse
    Semantic.Properties.Once
    Semantic.Properties.OnChange
    Semantic.Properties.OnClickOutside
    Semantic.Properties.OnClick
    Semantic.Properties.OnClose
    Semantic.Properties.OnComputer
    Semantic.Properties.OnComplete
    Semantic.Properties.OnCancel
    Semantic.Properties.OnConfirm
    Semantic.Properties.OnDismiss
    Semantic.Properties.OnHide
    Semantic.Properties.OnLargeScreen
    Semantic.Properties.Only
    Semantic.Properties.OnMobile
    Semantic.Properties.OnMount
    Semantic.Properties.OnMouseDown
    Semantic.Properties.OnOffScreen
    Semantic.Properties.OnOnScreen
    Semantic.Properties.OnOpen
    Semantic.Properties.OnPassed
    Semantic.Properties.OnPassing
    Semantic.Properties.OnPassingReverse
    Semantic.Properties.OnShow
    Semantic.Properties.OnStart
    Semantic.Properties.OnSubmit
    Semantic.Properties.OnTopPassed
    Semantic.Properties.OnTopPassedReverse
    Semantic.Properties.OnTopVisible
    Semantic.Properties.OnTopVisibleReverse
    Semantic.Properties.OnTablet
    Semantic.Properties.OnUnmount
    Semantic.Properties.OnUpdate
    Semantic.Properties.OnWidescreen
    Semantic.Properties.Open
    Semantic.Properties.OpenOnTriggerClick
    Semantic.Properties.OpenOnTriggerFocus
    Semantic.Properties.OpenOnTriggerMouseEnter
    Semantic.Properties.Ordered
    Semantic.Properties.Padded
    Semantic.Properties.Page
    Semantic.Properties.Pagination
    Semantic.Properties.Percent
    Semantic.Properties.Piled
    Semantic.Properties.Pointing
    Semantic.Properties.Position
    Semantic.Properties.Positive
    Semantic.Properties.Precision
    Semantic.Properties.Prepend
    Semantic.Properties.Primary
    Semantic.Properties.Raised
    Semantic.Properties.ReadOnly
    Semantic.Properties.Ref
    Semantic.Properties.Relaxed
    Semantic.Properties.Reply
    Semantic.Properties.Required
    Semantic.Properties.Reversed
    Semantic.Properties.Ribbon
    Semantic.Properties.Rotated
    Semantic.Properties.Rounded
    Semantic.Properties.Scrolling
    Semantic.Properties.Secondary
    Semantic.Properties.Section
    Semantic.Properties.Selectable
    Semantic.Properties.Selection
    Semantic.Properties.Simple
    Semantic.Properties.SingleLine
    Semantic.Properties.Size
    Semantic.Properties.Slider
    Semantic.Properties.Sortable
    Semantic.Properties.Sorted
    Semantic.Properties.Spaced
    Semantic.Properties.Src
    Semantic.Properties.Stackable
    Semantic.Properties.Stacked
    Semantic.Properties.Stretched
    Semantic.Properties.Striped
    Semantic.Properties.Structured
    Semantic.Properties.Styled
    Semantic.Properties.Styles
    Semantic.Properties.Sub
    Semantic.Properties.Success
    Semantic.Properties.TabIndex
    Semantic.Properties.Tabular
    Semantic.Properties.Tag
    Semantic.Properties.Tertiary
    Semantic.Properties.TextAlign
    Semantic.Properties.Threaded
    Semantic.Properties.Toggle
    Semantic.Properties.Total
    Semantic.Properties.TransitionOnMount
    Semantic.Properties.Transparent
    Semantic.Properties.Trigger
    Semantic.Properties.Type
    Semantic.Properties.UI
    Semantic.Properties.UnmountOnHide
    Semantic.Properties.Unstackable
    Semantic.Properties.Value
    Semantic.Properties.Vertical
    Semantic.Properties.VerticalAlign
    Semantic.Properties.Visible
    Semantic.Properties.Warning
    Semantic.Properties.Width
    Semantic.Properties.Widths
    Semantic.Properties.WithModal
    Semantic.Properties.WithPortal
    Semantic.Properties.WithRef
    Semantic.Properties.Wrapped
    Semantic.Utils
    Semantic.Views
    Semantic.Views.Advertisement
    Semantic.Views.Card
    Semantic.Views.Card.CardContent
    Semantic.Views.Card.CardDescription
    Semantic.Views.Card.CardGroup
    Semantic.Views.Card.CardHeader
    Semantic.Views.Card.CardMeta
    Semantic.Views.Comment
    Semantic.Views.Comment.CommentAction
    Semantic.Views.Comment.CommentActions
    Semantic.Views.Comment.CommentAuthor
    Semantic.Views.Comment.CommentAvatar
    Semantic.Views.Comment.CommentContent
    Semantic.Views.Comment.CommentGroup
    Semantic.Views.Comment.CommentMetadata
    Semantic.Views.Comment.CommentText
    Semantic.Views.Feed
    Semantic.Views.Feed.FeedContent
    Semantic.Views.Feed.FeedDate
    Semantic.Views.Feed.FeedEvent
    Semantic.Views.Feed.FeedExtra
    Semantic.Views.Feed.FeedLabel
    Semantic.Views.Feed.FeedLike
    Semantic.Views.Feed.FeedMeta
    Semantic.Views.Feed.FeedSummary
    Semantic.Views.Feed.FeedUser
    Semantic.Views.Item
    Semantic.Views.Item.ItemContent
    Semantic.Views.Item.ItemDescription
    Semantic.Views.Item.ItemExtra
    Semantic.Views.Item.ItemGroup
    Semantic.Views.Item.ItemHeader
    Semantic.Views.Item.ItemImage
    Semantic.Views.Item.ItemMeta
    Semantic.Views.Statistic
    Semantic.Views.Statistic.StatisticGroup
    Semantic.Views.Statistic.StatisticLabel
    Semantic.Views.Statistic.StatisticValue

  if impl(ghcjs)
    ghc-options: -O2 -dedupe -fexpose-all-unfoldings
    build-depends:
        ghcjs-base

  default-language: Haskell2010
