name:              semantic-ui-pure
version:           0.2.0.0
synopsis:          
homepage:          
author:            S. M. Hickman
maintainer:        sean@grump.ly
license:           BSD3
license-file:      LICENSE
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:
      src

  build-depends:
      base >=4.8
    , pure

  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    RecordWildCards
    TypeFamilies
    TypeOperators
    ViewPatterns
    OverloadedStrings
    MultiParamTypeClasses
    PackageImports
    CPP
    PolyKinds
    NoMonomorphismRestriction
    PatternSynonyms
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    ScopedTypeVariables
    TupleSections

  exposed-modules:
    Semantic.Addons.Confirm
    Semantic.Addons.Portal
    Semantic.Addons.Proxy
    Semantic.Addons.Responsive
    Semantic.Addons.TextArea
    Semantic.Addons.TransitionablePortal
    Semantic.Behaviors.Visibility
    Semantic.Collections.Breadcrumb
    Semantic.Collections.Form
    Semantic.Collections.Grid
    Semantic.Collections.Menu
    Semantic.Collections.Message
    Semantic.Collections.Table
    Semantic.Elements.Button
    Semantic.Elements.Container
    Semantic.Elements.Divider
    Semantic.Elements.Flag
    Semantic.Elements.Header
    Semantic.Elements.Icon
    Semantic.Elements.Image
    Semantic.Elements.Input
    Semantic.Elements.Label
    Semantic.Elements.List
    Semantic.Elements.Loader
    Semantic.Elements.Rail
    Semantic.Elements.Reveal
    Semantic.Elements.Segment
    Semantic.Elements.Step
    Semantic.Modules.Accordion
    Semantic.Modules.Checkbox
    Semantic.Modules.Dimmer
    Semantic.Modules.Dropdown
    Semantic.Modules.Embed
    Semantic.Modules.Modal
    Semantic.Modules.Popup
    Semantic.Modules.Progress
    Semantic.Modules.Rating
    Semantic.Modules.Search
    Semantic.Modules.Sidebar
    Semantic.Modules.Sticky
    Semantic.Modules.Tab
    Semantic.Modules.Transition
    Semantic.Properties
    Semantic.Utils
    Semantic.Views.Advertisement
    Semantic.Views.Card
    Semantic.Views.Comment
    Semantic.Views.Feed
    Semantic.Views.Item
    Semantic.Views.Statistic

  default-language: Haskell2010
